# bedrock-test

./: .gitignore  .pre-commit-config.yaml  README.md  mise.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/: .env.exsample  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/test/: test_answers.py  test_genres.py  test_questions.py
devtools/: make-env-python.sh  venv-activate.sh
docker/: .dockerignore  Dockerfile
terraform/: locals.tf  main.tf  variables.tf
